# Edu-Image-Tag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.yaml  pyproject.toml
edu_image_tag/: cli.py  config.py  context.py  gemini_client.py  hashing.py  models.py  registry.py
edu_image_tag/pipeline/: base.py  batch_runner.py  sync_runner.py
edu_image_tag/sources/: __init__.py  base.py  local.py
edu_image_tag/writers/: __init__.py  base.py  json_sidecar.py  jsonl.py  manifest_csv.py  review_jsonl.py
tests/: test_batch_runner.py  test_cli.py  test_config.py  test_context.py  test_gemini_batch.py  test_gemini_client.py  test_hashing.py  test_models.py  test_pipeline_base.py  test_registry.py  test_sources_local.py  test_sync_runner.py  test_writers.py
