[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edu-image-tag"
version = "0.1.0"
description = "Tag educational images with accessibility metadata using Google Gemini."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tam-mas" }]
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
edu-image-tag = "edu_image_tag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["edu_image_tag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
